tests/ui/dep-graph/dep-graph-trait-impl-two-traits.stderr
error: no path from `x::<impl Foo for char>` to `typeck_root`
  --> $DIR/dep-graph-trait-impl-two-traits.rs:32:34
   |
LL |     #[rustc_then_this_would_need(typeck_root)]
   |                                  ^^^^^^^^^^^

error: no path from `x::<impl Foo for char>` to `typeck_root`
  --> $DIR/dep-graph-trait-impl-two-traits.rs:41:34
   |
LL |     #[rustc_then_this_would_need(typeck_root)]
   |                                  ^^^^^^^^^^^

error: aborting due to 2 previous errors

